--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,6 @@
+v. 0.8.0
+API:
+    - added support for handling and exporting electronic transitions
 v. 0.7.4
 API:
     - Tesliper's method 'average_spectra' returns reference to dict of averaged spectra
