--- a/changelog.txt
+++ b/changelog.txt
@@ -10,7 +10,7 @@ GUI:
 v. 0.8.0
 API:
     - added RMSD-based trimming of conformers with similar geometry
-    - added auto saling and shifting spectra to match reference
+    - added auto scaling and shifting spectra to match reference
     - added support for handling and exporting electronic transitions
     - added export to .gjf files
     - added serialization of `Tesliper` class
@@ -49,7 +49,7 @@ GUI:
     - fixed stacked spectra coloring
     - corrected bars drawing for uv and ecd spectra
     - added option for filtering conformers with inconsistent data sizes
-    - splitted un/check into separate buttons
+    - split un/check into separate buttons
     - fixed checking/unchecking incomplete entries
     - added checking/unchecking inconsistent sizes
     - other minor changes and fixes
@@ -57,7 +57,7 @@ GUI:
 v. 0.7.2
 - added support for string 'genres' parameter in Tesliper.calculate_spectra method
 - added support for .xy spectra files
-- gui: fixed problem with avereged and stacked spectra drawing 
+- gui: fixed problem with averaged and stacked spectra drawing 
 - gui: set "user_home_dir/tesliper/" as default location for tslr_err_log.exe
 - other minor fixes and enhancements
 
@@ -76,19 +76,19 @@ v. 0.6.4
 - calculated spectra precision in txt files changed to e-4
 - spectra lines width changed
 - data trimming features corrected
-- spectra plot erasing on session clearing impelemented
+- spectra plot erasing on session clearing implemented
 - inverting x axis for uv and ecd spectra added
 
 v. 0.6.3
-- fixed export error when not choosen, but all data were exported
-- fixed export error when export occured after closing popup window
-- fixed export error when enetgies were not exported to spearate txt files
+- fixed export error when not chosen, but all data were exported
+- fixed export error when export occurred after closing popup window
+- fixed export error when energies were not exported to separate txt files
 - entry validation improved
 
 v. 0.6.2
 - solved some problems with corrupted files extraction
 - added warning when files from mixed gaussian runs found
-- fixed RuntimeError on overlaping actions
+- fixed RuntimeError on overlapping actions
 - fixed export popup error
 - errors description moved to tslr_err_log.txt
 - fixed ValueError on empty settings in gui_main.current_settings
@@ -97,7 +97,7 @@ v. 0.6.2
 - added Min. Boltzmann factor in GUI
 
 v. 0.6.1
-First beta relase
+First beta release
 
 v. 0.6.0 =>
-Early developement stages
+Early development stages
